Fixed avatar dropdown box not showing properly when browser is zoomed out

--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1298,6 +1298,8 @@
 
 .navbar__user-profile {
     margin-top: 0;
+    position: relative; /* Add this line */
+
 }
 
 /* Avatar styles */
